--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,73 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!--Main Navigation-->
+  <div class="page-container">
+    <div class="content-wrap">
+        <div class="row">
+          <!-- Sidebar -->
+            <div class="col-2">
+              <nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
+                <div class="position-sticky">
+                  <div class="list-group list-group-flush mx-3 mt-4">
+                    <!-- Collapse 1 -->
+                    <a class="list-group-item list-group-item-action py-2 ripple" aria-current="true"
+                      data-mdb-toggle="collapse" href="#collapse1" aria-expanded="true"
+                      aria-controls="collapse1">
+                      <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Student App menu</span>
+                    </a>
+                    <!-- Collapsed content -->
+                    <ul id="collapse1" class="collapse show list-group list-group-flush">
+                      <li class="list-group-item py-1">
+                        <a href="" class="text-reset">Home</a>
+                      </li>
+                      <li class="list-group-item py-1">
+                        <a href="http://localhost:4200/AddStudent-component" class="text-reset">Add New Student</a>
+                      </li>
+                      <li class="list-group-item py-1">
+                        <a href="http://localhost:4200/ListStudents-component" class="text-reset">Student Lists</a>
+                      </li>
+                      <li class="list-group-item py-1">
+                        <a href="http://localhost:4200/AddCourse-component" class="text-reset">Add New Course</a>
+                      </li>
+                      <li class="list-group-item py-1">
+                        <a href="http://localhost:4200/ListCourses-component" class="text-reset">Course List</a>
+                      </li>
+                      <li class="list-group-item py-1">
+                        <a href="http://localhost:4200/AddResults-component" class="text-reset">Add New Results</a>
+                      </li>
+                      <li class="list-group-item py-1">
+                        <a href="http://localhost:4200/ListResults-component" class="text-reset">Results List</a>
+                      </li>
+                    </ul>
+                    <!-- Collapse 1 -->
+
+                  </div>
+                </div>
+              </nav>
+            </div> 
+          <!-- Sidebar -->
+          <div class="col-10"></div>
+          <main style="margin-top: 5px;">
+            <div class="container pt-4"></div>
+            <app-root></app-root>
+          </main> 
+          </div> 
+      </div>
+    </div>
+  </div>
+
+<!-- Main Navigation--> 
+
+<!--Main layout-->
+<!-- <main style="margin-top: 58px;">
+  <div class="container pt-4"></div>
   <app-root></app-root>
+</main> -->
+<!--Main layout
+  
+  
+  
+  
 </body>
 </html>
